swagger for artist
