# app/Http/Controllers/ArtistController.php
@@ -2,6 +2,7 @@
 
 namespace App\Http\Controllers;
 
+use App\Http\Requests\StoreArtistRequest;
 use App\Http\Resources\ArtistResource;
 use App\Models\Artist;
 use App\Repositories\ArtistRepository;
@@ -17,49 +18,6 @@ class ArtistController extends Controller {
         $this->artistRepository = $artistRepository;
     }
 
-    /**
-     * @OA\Get(
-     *      path="/artists",
-     *      operationId="getArtistsList",
-     *      tags={"Artists"},
-     *      summary="Get list of artists",
-     *      description="Returns list of artists",
-     *      @OA\Parameter(
-     *          name="page",
-     *          description="Page number",
-     *          required=false,
-     *          in="path",
-     *          @OA\Schema(
-     *              type="integer"
-     *          )
-     *      ),
-     *      @OA\Parameter(
-     *          name="fields[artist]",
-     *          description="The available fields",
-     *          required=false,
-     *          in="path",
-     *          @OA\Schema(
-     *              type="string"
-     *          )
-     *      ),
-     *      @OA\Response(
-     *          response=200,
-     *          description="Successful operation",
-     *          @OA\JsonContent(
-     *              type="array",
-     *              @OA\Items(ref="#/components/schemas/Artist")
-     *          )
-     *       ),
-     *      @OA\Response(
-     *          response=401,
-     *          description="Unauthenticated",
-     *      ),
-     *      @OA\Response(
-     *          response=403,
-     *          description="Forbidden"
-     *      )
-     *     )
-     */
     public function index(Request $request) {
 
         try {
@@ -71,51 +29,16 @@ class ArtistController extends Controller {
         }
     }
 
-    /**
-     * Store a newly created resource in storage.
-     *
-     * @param  Request  $request
-     * @return Response
-     */
-    public function store(Request $request) {
-        //
+    public function store(StoreArtistRequest $request) {
+
+        try {
+            $artist = $this->artistRepository->create($request->all());
+            return new ArtistResource($artist);
+        } catch (\Exception $ex) {
+            return response()->json(['error' => $ex->getMessage()], 400);
+        }
     }
 
-    /**
-     * @OA\Get(
-     *      path="/artists/{id}",
-     *      operationId="getArtistById",
-     *      tags={"Artists"},
-     *      summary="Get artist information",
-     *      description="Returns artist data",
-     *      @OA\Parameter(
-     *          name="id",
-     *          description="Artist id",
-     *          required=true,
-     *          in="path",
-     *          @OA\Schema(
-     *              type="string", format="uuid"
-     *          )
-     *      ),
-     *      @OA\Response(
-     *          response=200,
-     *          description="Successful operation",
-     *          @OA\JsonContent(ref="#/components/schemas/Artist")
-     *       ),
-     *      @OA\Response(
-     *          response=400,
-     *          description="Bad Request"
-     *      ),
-     *      @OA\Response(
-     *          response=401,
-     *          description="Unauthenticated",
-     *      ),
-     *      @OA\Response(
-     *          response=403,
-     *          description="Forbidden"
-     *      )
-     * )
-     */
     public function show(Artist $artist) {
 
         try {
@@ -129,25 +52,24 @@ class ArtistController extends Controller {
         return response()->json($artist);
     }
 
-    /**
-     * Update the specified resource in storage.
-     *
-     * @param  Request  $request
-     * @param  Artist  $artist
-     * @return Response
-     */
-    public function update(Request $request, Artist $artist) {
-        //
+    public function update(StoreArtistRequest $request, Artist $artist) {
+
+        try {
+            $updatedArtist = $this->artistRepository->update($artist, $request->all());
+            return new ArtistResource($updatedArtist);
+        } catch (\Exception $ex) {
+            return response()->json(['error' => $ex->getMessage()]);
+        }
     }
 
-    /**
-     * Remove the specified resource from storage.
-     *
-     * @param  Artist  $artist
-     * @return Response
-     */
     public function destroy(Artist $artist) {
-        //
+
+        try {
+            $artist->delete();
+            return response(null, 204);
+        } catch (\Exception $ex) {
+            return response()->json(['error' => $ex->getMessage()]);
+        }
     }
 
 }
