# storage/api-docs/api-docs.json
@@ -61,6 +61,45 @@
                         "description": "Forbidden"
                     }
                 }
+            },
+            "post": {
+                "tags": [
+                    "Artists"
+                ],
+                "summary": "Store a new artist",
+                "description": "Store new artist",
+                "operationId": "storeArtist",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/StoreArtistRequest"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Artist"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
             }
         },
         "/artists/{id}": {
@@ -104,6 +143,99 @@
                         "description": "Forbidden"
                     }
                 }
+            },
+            "put": {
+                "tags": [
+                    "Artists"
+                ],
+                "summary": "Update existing artist",
+                "description": "Returns updated artist data",
+                "operationId": "updateArtist",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Artist id",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "format": "uuid"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/StoreArtistRequest"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "202": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Artist"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "404": {
+                        "description": "Resource Not Found"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Artists"
+                ],
+                "summary": "Delete existing artist",
+                "description": "Deletes an artist and returns no content",
+                "operationId": "deleteArtist",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Artist id",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "format": "uuid"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "404": {
+                        "description": "Resource Not Found"
+                    }
+                }
             }
         }
     },
@@ -115,16 +247,19 @@
                 "properties": {
                     "id": {
                         "title": "Id",
-                        "description": "Id",
                         "type": "string",
                         "format": "uuid",
                         "example": "f5d3101b-de3a-4778-8f6d-90479534c2e5"
                     },
-                    "name": {
-                        "title": "Name",
-                        "description": "Name of the artist (first and last name)",
+                    "first_name": {
+                        "title": "First name",
                         "type": "string",
-                        "example": "Tony BANKS"
+                        "example": "Tony"
+                    },
+                    "last_name": {
+                        "title": "Last name",
+                        "type": "string",
+                        "example": "BANKS"
                     },
                     "birth_date": {
                         "title": "Birth date",
@@ -165,6 +300,48 @@
                         "title": "Creation yeay",
                         "type": "string",
                         "example": "1969"
+                    }
+                },
+                "type": "object"
+            },
+            "StoreArtistRequest": {
+                "title": "StoreArtistRequest",
+                "description": "Store Artist request body data",
+                "required": [
+                    "first_name"
+                ],
+                "properties": {
+                    "first_name": {
+                        "title": "First name of the new artist",
+                        "description": "First name of the new artist",
+                        "type": "string",
+                        "example": "Tony"
+                    },
+                    "last_name": {
+                        "title": "Last name of the new artist",
+                        "description": "Last name of the new artist",
+                        "type": "string",
+                        "example": "BANKS"
+                    },
+                    "birth_date": {
+                        "title": "Birth date",
+                        "description": "Birth date of the new artist",
+                        "type": "string",
+                        "format": "date",
+                        "example": "1950-03-27"
+                    },
+                    "death_date": {
+                        "title": "Death date",
+                        "description": "Death date of the new artist",
+                        "type": "string",
+                        "format": "date",
+                        "example": ""
+                    },
+                    "nationality_id": {
+                        "title": "Nationality",
+                        "description": "Nationality of the new artist",
+                        "type": "string",
+                        "example": "GB"
                     }
                 },
                 "type": "object"
